# docs/swagger.json
@@ -16,50 +16,6 @@
     "host": "localhost:8080",
     "basePath": "/api/",
     "paths": {
-        "/album-photos/{sourceName}/{albumID}/": {
-            "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "get photos of album",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Album Photos",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "source name",
-                        "name": "sourceName",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "album ID",
-                        "name": "albumID",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "getAlbumPhotos",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/albums/{sourceName}/": {
             "get": {
                 "security": [
@@ -97,7 +53,7 @@
                 }
             }
         },
-        "/download-album/{sourceName}/{albumID}/": {
+        "/download-album/{albumID}/{sourceName}/": {
             "get": {
                 "security": [
                     {
